src/test/resources/frontend/fail/boolMap.skill
fail {
	map<bool,bool> b;
}
